[tool.poetry]
name = "Filkin-S_brain_games"
version = "0.1.0"
description = ""
authors = ["Filkin-S"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
packages = [
  { include = "brain_games" },
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"