[tool.poetry]
name = "Filkin-S_brain_games"
version = "0.5.0"
description = "Brain Games - a set of simple console games."
authors = ["Filkin Semion <fsp1988@ya.ru>"]
packages = [
  { include = "brain_games" },
]
classifiers = [
    "Topic :: Games/Entertainment"
]
repository = "https://test.pypi.org/project/filkin-s-brain-games/"

[tool.poetry.dependencies]
python = "^3.6"
prompt = "^0.4.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.14.0"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

